# penr-oz-mcp-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
.github/workflows/: tests.yml
app/: __init__.py  api.py  config.py  filesystem.py  prompts.py  resources.py  tools.py
sandbox/: README.md  welcome.txt
sandbox/data/: notes.txt  sample.json
sandbox/docs/: guide.md
tests/: test_api.py  test_filesystem.py  test_prompts.py  test_server_smoke.py
