[project]
name = "penr-oz-mcp-server"
version = "0.1.0"
description = "FastMCP-based MCP server scaffold for penr-oz"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "derinworks" }
]
dependencies = [
  "fastmcp",
]

[project.optional-dependencies]
optional = [
  "pydantic",
  "python-dotenv",
]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
